--- a/FUNCIONÁRIO(ADM)/infoLivroRecomendacao/styles.css
+++ b/FUNCIONÁRIO(ADM)/infoLivroRecomendacao/styles.css
@@ -18,7 +18,7 @@ body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -27,22 +27,22 @@ body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -76,7 +76,7 @@ body {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -84,8 +84,8 @@ body {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -99,17 +99,17 @@ body {
 
 main {
     flex: 1;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
 }
 
 .informacoes {
-    font-size: 30px;
+    font-size: 1.875rem;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
     text-align: center;
 }
 
@@ -119,8 +119,8 @@ main {
     justify-content: center;
     max-width: 95%;
     margin: 0 auto;
-    gap: 10px;
-    padding: 20px;
+    gap: 0.625rem;
+    padding: 1.25rem;
     box-sizing: border-box;
 }
 
@@ -129,8 +129,8 @@ main {
     box-sizing: border-box;
     height: auto;
     border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 0.625rem;
+    padding: 0.625rem;
 }
 
 .info-book-reserva {
@@ -138,18 +138,18 @@ main {
 }
 
 .img-reserva {
-    height: 180px;
-    width: 120px;
-    border-radius: 5px;
-    margin: 15px;
+    height: 11.25rem;
+    width: 7.5rem;
+    border-radius: 0.313rem;
+    margin: 0.938rem;
 }
 
 .livro-info {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 12px;
-    margin-top: 5px;
+    font-size: 0.75rem;
+    margin-top: 0.313rem;
 }
 
 .header-lineSquare {
@@ -162,14 +162,14 @@ main {
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
     margin-bottom: 0px;
 }
 
 .livro {
     margin-bottom: 0px;
-    margin-top: 3px;
-    font-size: 13.5px;
+    margin-top: 0.188rem;
+    font-size: 0.844rem;
 }
 
 .smallLineSquare {
@@ -178,8 +178,8 @@ main {
     box-sizing: border-box;
     height: auto;
     border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 0.625rem;
+    padding: 0.625rem;
     margin-bottom: 0px;
 }
 
@@ -193,9 +193,9 @@ main {
 }
 
 .resumo {
-    margin-top: 3px;
-    font-size: 14px;
-    font-size: 13.5px;
+    margin-top: 0.188rem;
+    font-size: 0.875rem;
+    font-size: 0.844rem;
 }
 
 .info-container {
@@ -213,7 +213,7 @@ main {
 
 .img-icons {
     height: auto;
-    width: 30px;
+    width: 1.875rem;
 }
 
 .line {
@@ -221,15 +221,15 @@ main {
     box-sizing: border-box;
     height: auto;
     border-bottom: 1px solid #ccc;
-    margin: 10px;
+    margin: 0.625rem;
 }
 
 .desc-prof {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 13px;
-    margin-left: 15px;
+    font-size: 0.813rem;
+    margin-left: 0.938rem;
     margin-bottom: 0px;
 }
 
@@ -237,69 +237,28 @@ main {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 13px;
-    margin-left: 15px;
-    margin-top: 5px;
+    font-size: 0.813rem;
+    margin-left: 0.938rem;
+    margin-top: 0.313rem;
 }
 
 .modulo-form {
     display: flex;
-    gap: 34px;
-    margin-left: 12px;
-    margin-top: 6px;
+    gap: 2.125rem;
+    margin-left: 0.75rem;
+    margin-top: 0.375rem;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 13px;
+    font-size: 0.813rem;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 8px;
-}
-
-.conteudo {
-    text-align: center;
-}
-
-
-
-.text-input {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 14px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-
 
 input[type="radio"] {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     border: 1px solid #ccc;
     border-radius: 50%;
     background: #fff;
@@ -315,8 +274,8 @@ input[type="radio"]:checked {
 input[type="radio"]:checked::before {
     content: '';
     display: block;
-    width: 8px;
-    height: 8px;
+    width: 0.5rem;
+    height: 0.5rem;
     border-radius: 50%;
     background-color: #fff;
     position: absolute;
@@ -332,18 +291,18 @@ input[type="radio"]:checked::before {
 }
 
 .reserv-button {
-    height: 45px;
-    padding: 10px 30px;
-    margin: 20px 0;
+    height: 2.813rem;
+    padding: 0.625rem 1.875rem;
+    margin: 1.25rem 0;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .reserv-button:hover {
@@ -357,13 +316,13 @@ footer {
 	width: 100%;
 	color:#000;
 	text-align: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 footer a {
     color: #FF735C;
