--- a/FUNCIONÁRIO(ADM)/login/styles.css
+++ b/FUNCIONÁRIO(ADM)/login/styles.css
@@ -30,36 +30,36 @@ body, html {
 }
 
 .imgLogin {
-    width: 400px;
-    height: 400px;
-}
-
-.login {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 0;
-    margin-bottom: 15px;
+    width: 25rem;
+    height: 25rem;
 }
 
 .conteudo {
     text-align: center;
 }
 
+.login {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 0;
+    margin-bottom: 0.938rem;
+}
+
 .input-field {
     width: 70%;
-    height: 45px;
-    padding: 20px;
-    margin: 10px 0;
+    height: 2.813rem;
+    padding: 1.25rem;
+    margin: 0.625rem 0;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     box-sizing: border-box; /* Garante que o padding não ultrapasse a largura do container */
 }
 
 .input-field::placeholder {
     color: #999;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -78,7 +78,7 @@ input[type=number]::-webkit-inner-spin-button {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 12px;
+    font-size: 0.75rem;
     margin-top: 25px;
     margin-bottom: 5px;
 }
@@ -88,7 +88,7 @@ input[type=number]::-webkit-inner-spin-button {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 
 a {
@@ -97,18 +97,18 @@ a {
 
 .login-button {
     width: 35%;
-    height: 45px;
-    padding: 10px;
-    margin: 20px 0;
+    height: 2.813rem;
+    padding: 0.625rem;
+    margin: 1.25rem 0;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .login-button:hover {
