--- a/FUNCIONÁRIO(ADM)/perfil/styles.css
+++ b/FUNCIONÁRIO(ADM)/perfil/styles.css
@@ -12,7 +12,7 @@ body, html {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -21,22 +21,22 @@ body, html {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -70,7 +70,7 @@ body, html {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -78,8 +78,8 @@ body, html {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -91,20 +91,26 @@ body, html {
     color: red;
 }
 
-.conteudo {
-    text-align: center;
-}
-
 .content-wrapper {
     display: flex;
     flex-direction: column;
-    min-height: calc(89vh - 79px); /* Altura do cabeçalho e rodapé */
+    min-height: calc(89vh - 4.938rem); /* Altura do cabeçalho e rodapé */
 }
 
 main {
     flex: 1;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
+}
+
+.perfil {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
+    text-align: center;
 }
 
 .parent-container {
@@ -112,7 +118,7 @@ main {
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
 }
 
@@ -121,35 +127,26 @@ main {
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    max-width: 800px;
+    max-width: 50rem;
     box-sizing: border-box;
 }
 
-.perfil {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
-}
 
 .profile-container {
     text-align: center;
-    margin-right: 150px;
+    margin-right: 9.375rem;
 }
 
 .img-container {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
 }
 
 .img-container img {
-    width: 150px;
-    height: 150px;
+    width: 9.375rem;
+    height: 9.375rem;
     border-radius: 50%;
     object-fit: cover;
-    border: 2px solid #ccc;
+    border: 0.125rem solid #ccc;
 }
 
 .input-container {
@@ -162,7 +159,7 @@ input[type="file"] {
 
 .input-group {
     flex-direction: column;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
     display: flex;
 }
 
@@ -170,18 +167,18 @@ input[type="file"] {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 14px;
+    font-size: 0.875rem;
     width: 100%;
     margin: 0 auto;
 }
 
 .input-field {
     width: 100%;
-    height: 45px;
-    padding: 20px;
-    margin: 10px 0;
+    height: 2.813rem;
+    padding: 1.25rem;
+    margin: 0.625rem 0;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     box-sizing: border-box; 
 }
 
@@ -195,29 +192,29 @@ input[type=number]::-webkit-inner-spin-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    margin-top: 12px;
+    gap: 0.625rem;
+    margin-top: 0.75rem;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .sexo-form legend {
     margin: 0;
-    padding-right: 10px;
+    padding-right: 0.625rem;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 15px;
+    font-size: 0.938rem;
 }
 
 input[type="radio"] {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     border: 1px solid #ccc;
     border-radius: 50%;
     background: #fff;
@@ -233,8 +230,8 @@ input[type="radio"]:checked {
 input[type="radio"]:checked::before {
     content: '';
     display: block;
-    width: 8px;
-    height: 8px;
+    width: 0.5rem;
+    height: 0.5rem;
     border-radius: 50%;
     background-color: #fff;
     position: absolute;
@@ -248,9 +245,9 @@ input[type="radio"]:checked::before {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 12px;
-    margin-top: 25px;
-    margin-bottom: 5px;
+    font-size: 0.75rem;
+    margin-top: 1.563rem;
+    margin-bottom: 0.313rem;
     text-align: center;
 }
 
@@ -267,22 +264,22 @@ a {
 }
 
 .cadastro-button {
-    width: 60px;
-    height: 60px;
-    padding: 10px;
-    margin: 20px 0;
+    width: 3.75rem;
+    height: 3.75rem;
+    padding: 0.625rem;
+    margin: 1.25rem 0;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px; 
+    font-size: 1rem; 
     position: absolute;
-    right: 70px;
-    bottom: 50px;
+    right: 4.375rem;
+    bottom: 3.125rem;
 }
 
 .cadastro-button:hover {
@@ -291,7 +288,7 @@ a {
 
 .cadastro-button img {
     height: auto;
-    width: 40px;
+    width: 2.5rem;
 }
 
 footer {
@@ -301,13 +298,13 @@ footer {
 	width: 100%;
 	color:#000;
 	text-align: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 footer a {
     color: #FF735C;
