--- a/FUNCIONÁRIO(ADM)/perfilEditar/styles.css
+++ b/FUNCIONÁRIO(ADM)/perfilEditar/styles.css
@@ -18,7 +18,7 @@ body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -27,22 +27,22 @@ body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -76,7 +76,7 @@ body {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -84,8 +84,8 @@ body {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -97,14 +97,20 @@ body {
     color: red;
 }
 
-.conteudo {
-    text-align: center;
-}
-
 main {
     flex: 1;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
+}
+
+.perfil {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
+    text-align: center;
 }
 
 .parent-container {
@@ -112,7 +118,7 @@ main {
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
 }
 
@@ -121,35 +127,44 @@ main {
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    max-width: 800px;
+    max-width: 50rem;
     box-sizing: border-box;
-}
-
-.perfil {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
 }
 
 .profile-container {
     text-align: center;
-    margin-right: 150px;
+    margin-right: 9.375rem;
 }
 
 .img-container {
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 .img-container img {
-    width: 150px;
-    height: 150px;
+    width: 9.375rem;
+    height: 9.375rem;
     border-radius: 50%;
     object-fit: cover;
     border: 2px solid #ccc;
+}
+
+/* Estilo para custom-file-upload */
+.custom-file-upload {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem 0.875rem;
+    cursor: pointer;
+    background-color: #3F7263; /* Cor de fundo verde */
+    color: white; /* Cor do texto branco */
+    border: 1px solid #3F7263; /* Borda verde */
+    border-radius: 1.875rem; /* Bordas arredondadas */
+    text-align: center;
+    font-size: 0.75rem;
+    font-family: 'Poppins', sans-serif; /* Fonte Poppins */
+}
+
+.custom-file-upload:hover {
+    opacity: 0.5;
 }
 
 .input-container {
@@ -162,7 +177,7 @@ input[type="file"] {
 
 .input-group {
     flex-direction: column;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
     display: flex;
 }
 
@@ -170,18 +185,18 @@ input[type="file"] {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 14px;
+    font-size: 0.875rem;
     width: 100%;
     margin: 0 auto;
 }
 
 .input-field {
     width: 100%;
-    height: 45px;
-    padding: 20px;
-    margin: 10px 0;
+    height: 2.813rem;
+    padding: 1.25rem;
+    margin: 0.625rem 0;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     box-sizing: border-box; 
 }
 
@@ -195,48 +210,29 @@ input[type=number]::-webkit-inner-spin-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    margin-top: 12px;
+    gap: 0.625rem;
+    margin-top: 0.75rem;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .sexo-form legend {
     margin: 0;
-    padding-right: 10px;
+    padding-right: 0.625rem;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 15px;
-}
-
-/* Estilo para custom-file-upload */
-.custom-file-upload {
-    display: flex;
-    flex-direction: column;
-    padding: 8px 14px;
-    cursor: pointer;
-    background-color: #3F7263; /* Cor de fundo verde */
-    color: white; /* Cor do texto branco */
-    border: 1px solid #3F7263; /* Borda verde */
-    border-radius: 30px; /* Bordas arredondadas */
-    text-align: center;
-    font-size: 12px;
-    font-family: 'Poppins', sans-serif; /* Fonte Poppins */
-}
-
-.custom-file-upload:hover {
-    opacity: 0.5;
+    font-size: 0.938rem;
 }
 
 input[type="radio"] {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     border: 1px solid #ccc;
     border-radius: 50%;
     background: #fff;
@@ -252,8 +248,8 @@ input[type="radio"]:checked {
 input[type="radio"]:checked::before {
     content: '';
     display: block;
-    width: 8px;
-    height: 8px;
+    width: 0.5rem;
+    height: 0.5rem;
     border-radius: 50%;
     background-color: #fff;
     position: absolute;
@@ -267,7 +263,7 @@ input[type="radio"]:checked::before {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 12px;
+    font-size: 0.75rem;
     margin-top: 25px;
     margin-bottom: 5px;
     text-align: center;
