--- a/FUNCIONÁRIO(ADM)/reservarLivro/styles.css
+++ b/FUNCIONÁRIO(ADM)/reservarLivro/styles.css
@@ -18,7 +18,7 @@ body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -27,22 +27,22 @@ body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -76,7 +76,7 @@ body {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -84,8 +84,8 @@ body {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -97,244 +97,31 @@ body {
     color: red;
 }
 
+main {
+    flex: 1;
+    padding: 1.25rem;
+    box-sizing: border-box;
+}
+
+.informacoes {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
+    text-align: center;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     max-width: 95%;
     margin: 0 auto;
-    gap: 10px;
-    padding: 20px;
+    gap: 0.625rem;
+    padding: 1.25rem;
     box-sizing: border-box;
-}
-
-.remov-button {
-    right: 50px;
-    top: 150px;
-    position: absolute;
-    height: 40px;
-    padding: 10px 20px;
-    margin: 20px 0;
-    background-color: #FF735C;
-    color: white;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 14px;
-    text-align: center;
-}
-
-.add-button:hover {
-    opacity: 0.5;
-}
-
-.lineSquare {
-    width: 40%;
-    box-sizing: border-box;
-    height: auto;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.info-book-reserva {
-    display: flex;
-}
-
-.img-reserva {
-    height: 180px;
-    width: 120px;
-    border-radius: 5px;
-    margin: 15px;
-}
-
-.header-lineSquare {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.geral {
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 16px;
-    margin-bottom: 0px;
-}
-
-.livro-info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
-    margin-top: 5px;
-}
-
-.livro {
-    margin-bottom: 0px;
-    margin-top: 3px;
-    font-size: 13.5px;
-}
-
-.smallLineSquare {
-    width: auto;
-    height: 10px;
-    box-sizing: border-box;
-    height: auto;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 0px;
-}
-
-.text {
-    text-align: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.line {
-    width: 100%;
-    box-sizing: border-box;
-    height: auto;
-    border-bottom: 1px solid #ccc;
-    margin: 10px;
-}
-
-.form-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 50%;
-}
-
-.info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 8px;
-}
-
-.resumo {
-    margin-top: 3px;
-    font-size: 14px;
-    font-size: 13.5px;
-}
-
-.desc-prof {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 15px;
-    margin-bottom: 0px;
-}
-
-.desc-prof-curso {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 15px;
-    margin-top: 5px;
-}
-
-.info-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.info-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.img-icons {
-    height: auto;
-    width: 30px;
-}
-
-main {
-    flex: 1;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.conteudo {
-    text-align: center;
-}
-
-.informacoes {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
-}
-
-.text-input {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 14px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.modulo-form {
-    display: flex;
-    gap: 34px;
-    margin-left: 12px;
-    margin-top: 6px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 13px;
-}
-
-input[type="radio"] {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    width: 16px;
-    height: 16px;
-    border: 1px solid #ccc;
-    border-radius: 50%;
-    background: #fff;
-    cursor: pointer;
-    position: relative;
-}
-
-input[type="radio"]:checked {
-    border: 1px solid #3F7263;
-    background-color: #3F7263;
-}
-
-input[type="radio"]:checked::before {
-    content: '';
-    display: block;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background-color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .editar {
@@ -344,18 +131,18 @@ input[type="radio"]:checked::before {
 }
 
 .reserv-button {
-    height: 45px;
-    padding: 10px 30px;
-    margin: 20px 0;
+    height: 2.813rem;
+    padding: 0.625rem 1.875rem;
+    margin: 1.25rem 0;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .reserv-button:hover {
@@ -369,13 +156,13 @@ footer {
 	width: 100%;
 	color:#000;
 	text-align: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 footer a {
     color: #FF735C;
@@ -384,104 +171,4 @@ footer a {
 
 footer a:hover {
     color: #3F7263;
-}
-
-.text-modal {
-    font-family: "Poppins", sans-serif;
-	font-weight: 600;
-	font-style: normal;
-    font-size: 18px;
-    margin-top: 30px;
-}
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-}
-
-.modal:target {
-    display: block;
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 300px;
-    text-align: center;
-    border-radius: 10px;
-}
-
-.close-button {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close-button:hover,
-.close-button:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.buttons {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-evenly;
-}
-
-.modal-button-sim {
-    background-color: #FF735C;
-    color: #000;
-    border: none;
-    padding: 10px 30px;
-    margin: 10px 0;
-    border-radius: 30px;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 16px;
-    display: block;
-    width: 100%;
-}
-
-.modal-button-sim:hover {
-    opacity: 0.5;
-}
-
-.modal-button-não {
-    background-color: #FFF;
-    color: #000;
-    border: 1px  solid #000;
-    padding: 10px 30px;
-    margin: 10px 0;
-    border-radius: 30px;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 16px;
-    display: block;
-    width: 100%;
-}
-
-.modal-button-não:hover {
-    opacity: 0.5;
-}
-
-.modal-content a {
-    text-decoration: none;
 }
