--- a/FUNCIONÁRIO(ADM)/reservas/styles.css
+++ b/FUNCIONÁRIO(ADM)/reservas/styles.css
@@ -18,7 +18,7 @@ body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -27,22 +27,22 @@ body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -76,7 +76,7 @@ body {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -84,8 +84,8 @@ body {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -97,142 +97,40 @@ body {
     color: red;
 }
 
+main {
+    flex: 1;
+    padding: 1.25rem;
+    box-sizing: border-box;
+}
+
+.informacoes {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
+    text-align: center;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     max-width: 95%;
     margin: 0 auto;
-    gap: 10px;
-    padding: 20px;
+    gap: 0.625rem;
+    padding: 1.25rem;
     box-sizing: border-box;
 }
 
 .lineSquare {
-    width: 410px;
+    width: 25.625rem;
     box-sizing: border-box;
     height: auto;
     border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.info-book-reserva {
-    display: flex;
-}
-
-.img-reserva {
-    height: auto;
-    width: 50px;
-    border-radius: 5px;
-    margin: 15px;
-}
-
-.livro-info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
-    margin-top: 5px;
-}
-
-.line {
-    width: 100%;
-    box-sizing: border-box;
-    height: auto;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 10px;
-}
-
-.form-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 50%;
-}
-
-.info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 8px;
-}
-
-.p-usuario {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 13px;
-    text-align: center;
-}
-
-.opcao {
-    justify-content:space-evenly;
-    align-items: center;
-    display: flex;
-
-}
-
-.select-input {
-    width: 58%;
-    height: 40px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    box-sizing: border-box;
-    background-color: #fff;
-    font-family: "Poppins", sans-serif;
-    margin: 14px;
-    font-size: 12px;
-}
-
-/* Opcional: Estilo para hover e focus */
-.select-input:hover,
-.select-input:focus {
-    border-color: #FF735C;
-    outline: none;
-}
-
-main {
-    flex: 1;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.conteudo {
-    text-align: center;
-}
-
-.parent-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.p-i-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    max-width: 800px;
-    box-sizing: border-box;
-}
-
-.informacoes {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
+    border-radius: 0.625rem;
+    padding: 0.625rem;
 }
 
 .input-container {
@@ -243,27 +141,82 @@ input[type="file"] {
     display: none;
 }
 
-.text-input {
+.info-book-reserva {
+    display: flex;
+}
+
+.img-reserva {
+    height: auto;
+    width: 3.125rem;
+    border-radius: 0.313rem;
+    margin: 0.938rem;
+}
+
+.livro-info {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 0.75rem;
+    margin-top: 0.313rem;
+}
+
+.line {
+    width: 100%;
+    box-sizing: border-box;
+    height: auto;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 0.625rem;
+}
+
+.info {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 14px;
-    width: 100%;
-    margin: 0 auto;
+    font-size: 0.813rem;
+    margin-left: 0.5rem;
+}
+
+.p-usuario {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 0.813rem;
+    text-align: center;
+}
+
+.opcao {
+    justify-content:space-evenly;
+    align-items: center;
+    display: flex;
+
 }
 
 .confirm-button {
-    height: 50px;
-    width: 120px;
+    height: 3.125rem;
+    width: 7.5rem;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 12px;
+    font-size: 0.75rem;
+}
+
+.cancel-button {
+    height: 3.125rem;
+    width: 7.5rem;
+    background-color: #FFF;
+    color: black;
+    border: 1px solid black;
+    border-radius: 1.875rem;
+    cursor: pointer;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 0.75rem;
 }
 
 .confirm-button:hover,
@@ -271,28 +224,14 @@ input[type="file"] {
     opacity: 0.5;
 }
 
-.cancel-button {
-    height: 50px;
-    width: 120px;
-    background-color: #FFF;
-    color: black;
-    border: 1px solid black;
-    border-radius: 30px;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
-}
-
 .obs {
-    font-size: 12px;
+    font-size: 0.75rem;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
     color: #8a8a8a;
-    margin-top: 20px;
-    margin-bottom: 5px;
+    margin-top: 1.25rem;
+    margin-bottom: 0.313rem;
 }
 
 footer {
@@ -302,13 +241,13 @@ footer {
 	width: 100%;
 	color:#000;
 	text-align: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 footer a {
     color: #FF735C;
