--- a/addLivroNovo/styles.css
+++ b/addLivroNovo/styles.css
@@ -190,6 +190,7 @@ input[type="file"] {
     box-sizing: border-box; 
 }
 
+/* Remove as setas do input de número */
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
