--- a/biblioteca/styles.css
+++ b/biblioteca/styles.css
@@ -181,8 +181,8 @@ main {
     font-style: normal;
     margin-top: 1.25rem;
     display: flex;
-    flex-wrap: wrap; /* Permite que os itens se movam para a próxima linha se não houver espaço suficiente */
-    gap: 0.625rem; /* Espaçamento entre os livros */
+    flex-wrap: wrap;
+    gap: 0.625rem;
     justify-content: center;
     max-width: 100%;
     margin: 0 auto;
@@ -194,13 +194,13 @@ main {
 .book-genre {
     width: 5.625rem;
     height: 5.625rem;
-    box-sizing: border-box; /* Inclui o padding e border no cálculo da largura total */
-    max-width: calc(16.66% - 1.25rem); /* Garante que o item não exceda 1/6 do espaço disponível */
+    box-sizing: border-box;
+    max-width: calc(16.66% - 1.25rem);
     background: #599684;
-    padding: 0.25rem; /* Adiciona um padding interno */
+    padding: 0.25rem;
     border-radius: 0.5rem;
     text-align: center;
-    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288); /* Adiciona uma sombra leve ao redor dos itens */
+    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288);
 }
 
 .icon {
@@ -223,8 +223,8 @@ main {
     font-style: normal;
     margin-top: 1.25rem;
     display: flex;
-    flex-wrap: wrap; /* Permite que os itens se movam para a próxima linha se não houver espaço suficiente */
-    gap: 0.625rem; /* Espaçamento entre os livros */
+    flex-wrap: wrap;
+    gap: 0.625rem;
     justify-content: center;
     max-width: 98%;
     margin: 0 auto;
@@ -241,13 +241,13 @@ main {
 .book-item {
     width: 12.5rem;
     height: 14.063rem;
-    box-sizing: border-box; /* Inclui o padding e border no cálculo da largura total */
-    max-width: calc(16.66% - 1.25rem); /* Garante que o item não exceda 1/6 do espaço disponível */
+    box-sizing: border-box;
+    max-width: calc(16.66% - 1.25rem);
     background: #FFF;
-    padding: 0.25rem; /* Adiciona um padding interno */
+    padding: 0.25rem;
     border-radius: 0.5rem;
     text-align: center;
-    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288); /* Adiciona uma sombra leve ao redor dos itens */
+    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288);
 }
 
 .book-item:hover {
@@ -366,21 +366,3 @@ footer a:hover {
 .modal-content a {
     text-decoration: none;
 }
-
-/* @media screen and (max-width: 1024px) {
-    .book-list {
-        max-width: 80%;
-    }
-    
-    .book-title {
-        font-size: 12px;
-    }
-    
-    .book-author {
-        font-size: 10px;
-    }
-    
-    .book-course {
-        font-size: 10px;
-    }
-} */
