--- a/login/styles.css
+++ b/login/styles.css
@@ -54,7 +54,7 @@ body, html {
     margin: 0.625rem 0;
     border: 1px solid #ccc;
     border-radius: 1.875rem;
-    box-sizing: border-box; /* Garante que o padding não ultrapasse a largura do container */
+    box-sizing: border-box;
 }
 
 .input-field::placeholder {
@@ -84,7 +84,7 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .esqueceuSenha {
-    color: #FF735C; /* Cor do texto */
+    color: #FF735C;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
@@ -92,7 +92,7 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 a {
-    color: #FF735C; /* Cor do texto */
+    color: #FF735C;
 }
 
 .login-button {
