--- a/perfil/styles.css
+++ b/perfil/styles.css
@@ -94,7 +94,7 @@ body, html {
 .content-wrapper {
     display: flex;
     flex-direction: column;
-    min-height: calc(89vh - 4.938rem); /* Altura do cabeçalho e rodapé */
+    min-height: calc(89vh - 4.938rem);
 }
 
 main {
@@ -183,6 +183,7 @@ input[type="file"] {
     background-color: #FFF;
 }
 
+/* Remove as setas do input de número */
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -213,8 +214,8 @@ input[type=number]::-webkit-inner-spin-button {
 
 .sexo-form label {
     display: flex;
-    align-items: center; /* Alinha o texto e o botão de rádio verticalmente */
-    gap: 0.5rem; /* Adiciona um espaço entre o botão e o texto */
+    align-items: center;
+    gap: 0.5rem;
 }
 
 input[type="radio"] {
