--- a/recomendacao/styles.css
+++ b/recomendacao/styles.css
@@ -98,7 +98,7 @@ body {
 }
 
 main {
-    flex: 1; /* Faz o main ocupar o espaço restante */
+    flex: 1;
     padding: 1.25rem;
     box-sizing: border-box;
 }
@@ -146,8 +146,8 @@ main {
     font-style: normal;
     margin-top: 1.25rem;
     display: flex;
-    flex-wrap: wrap; /* Permite que os itens se movam para a próxima linha se não houver espaço suficiente */
-    gap: 0.625rem; /* Espaçamento entre os livros */
+    flex-wrap: wrap;
+    gap: 0.625rem;
     justify-content: center;
     max-width: 100%;
     margin-bottom: 1.875rem;
@@ -158,13 +158,13 @@ main {
 .book-genre {
     width: 5.625rem;
     height: 5.625rem;
-    box-sizing: border-box; /* Inclui o padding e border no cálculo da largura total */
-    max-width: calc(16.66% - 1.25rem); /* Garante que o item não exceda 1/6 do espaço disponível */
+    box-sizing: border-box;
+    max-width: calc(16.66% - 1.25rem);
     background: #599684;
-    padding: 0.25rem; /* Adiciona um padding interno */
+    padding: 0.25rem;
     border-radius: 0.5rem;
     text-align: center;
-    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288); /* Adiciona uma sombra leve ao redor dos itens */
+    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288);
 }
 
 .icon {
@@ -208,8 +208,8 @@ main {
     font-style: normal;
     margin-top: 1.25rem;
     display: flex;
-    flex-wrap: wrap; /* Permite que os itens se movam para a próxima linha se não houver espaço suficiente */
-    gap: 0.625rem; /* Espaçamento entre os livros */
+    flex-wrap: wrap;
+    gap: 0.625rem;
     justify-content: center;
     max-width: 98%;
     margin: 0 auto;
@@ -226,13 +226,13 @@ main {
 .book-item {
     width: 12.5rem;
     height: 14.063rem;
-    box-sizing: border-box; /* Inclui o padding e border no cálculo da largura total */
-    max-width: calc(16.66% - 1.25rem); /* Garante que o item não exceda 1/6 do espaço disponível */
+    box-sizing: border-box;
+    max-width: calc(16.66% - 1.25rem);
     background: #FFF;
-    padding: 0.25rem; /* Adiciona um padding interno */
+    padding: 0.25rem;
     border-radius: 0.5rem;
     text-align: center;
-    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288); /* Adiciona uma sombra leve ao redor dos itens */
+    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288);
 }
 
 .book-item:hover {
@@ -294,22 +294,3 @@ footer a {
 footer a:hover {
     color: #3F7263;
 }
-
-/* 
-@media screen and (max-width: 1024px) {
-    .book-list {
-        max-width: 80%;
-    }
-    
-    .book-title {
-        font-size: 0.75rem;
-    }
-    
-    .book-author {
-        font-size: 0.625rem;
-    }
-    
-    .book-course {
-        font-size: 0.625rem;
-    }
-} */
