--- a/signUp/styles.css
+++ b/signUp/styles.css
@@ -69,12 +69,12 @@ body, html {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 0.625rem; /* Espaçamento entre os campos */
+    gap: 0.625rem;
     width: 100%;
 }
 
 .senha-field {
-    width: calc(40.5% - 0.625rem); /* Ajuste conforme necessário, -0.625rem por causa do gap */
+    width: calc(40.5% - 0.625rem);
     margin: 0.625rem 0;
 }
 
@@ -89,13 +89,13 @@ input[type=number]::-webkit-inner-spin-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0.625rem; /* Espaçamento entre os elementos */
+    gap: 0.625rem;
     margin-top: 0.75rem;
 }
 
 .sexo-form legend {
-    margin: 0; /* Remove a margem padrão do legend */
-    padding-right: 0.625rem; /* Espaçamento à direita do legend */
+    margin: 0;
+    padding-right: 0.625rem;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
@@ -109,16 +109,16 @@ input[type="radio"] {
     -moz-appearance: none;
     width: 1rem;
     height: 1rem;
-    border: 1px solid #ccc; /* Cor da borda externa */
+    border: 1px solid #ccc;
     border-radius: 50%;
-    background: #fff; /* Cor de fundo inicial */
+    background: #fff;
     cursor: pointer;
     position: relative;
 }
 
 input[type="radio"]:checked {
-    border: 1px solid #FF735C; /* Cor da borda externa */
-    background-color: #FF735C; /* Cor interna quando selecionado */
+    border: 1px solid #FF735C;
+    background-color: #FF735C;
 }
 
 input[type="radio"]:checked::before {
@@ -127,7 +127,7 @@ input[type="radio"]:checked::before {
     width: 0.5rem;
     height: 0.5rem;
     border-radius: 50%;
-    background-color: #fff; /* Cor do ponto central quando selecionado */
+    background-color: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -139,7 +139,7 @@ label {
     font-weight: 300;
     font-style: normal;
     font-size: 0.875rem;
-    padding-left: 1.875rem; /* Espaçamento entre o radio button e o texto */
+    padding-left: 1.875rem;
     cursor: pointer;
 }
 
