--- a/telaInicial/styles.css
+++ b/telaInicial/styles.css
@@ -140,8 +140,8 @@ main {
 }
 
 .book-section {
-    max-width: 65%; /* Ajuste a largura máxima do contêiner de livros */
-    margin: 0 auto; /* Centralize o contêiner na página */
+    max-width: 65%;
+    margin: 0 auto;
     padding-top: 25px;
     padding-bottom: 10px;
 }
@@ -159,24 +159,24 @@ main {
     font-style: normal;
     margin-top: 20px;
     display: flex;
-    flex-wrap: wrap; /* Permite que os itens se movam para a próxima linha se não houver espaço suficiente */
-    gap: 10px; /* Espaçamento entre os livros */
+    flex-wrap: wrap;
+    gap: 10px;
     justify-content: center;
-    max-width: 70%; /* Ajuste a largura máxima do contêiner de livros */
+    max-width: 70%;
     margin: 0 auto;
     margin-bottom: 30px;
     cursor: pointer;
 }
 
 .book-item {
-    flex: 1 1 calc(16.66% - 20px); /* Faz com que cada item ocupe cerca de 1/6 do espaço disponível, com 10px de espaçamento */
-    box-sizing: border-box; /* Inclui o padding e border no cálculo da largura total */
-    max-width: calc(16.66% - 20px); /* Garante que o item não exceda 1/6 do espaço disponível */
+    flex: 1 1 calc(16.66% - 20px);
+    box-sizing: border-box;
+    max-width: calc(16.66% - 20px);
     background: #FFF;
-    padding: 4px; /* Adiciona um padding interno */
+    padding: 4px;
     border-radius: 8px;
     text-align: center;
-    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288); /* Adiciona uma sombra leve ao redor dos itens */
+    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288);
 }
 
 .book-item:hover {
@@ -242,21 +242,3 @@ footer a {
 footer a:hover {
     color: #3F7263;
 }
-
-/* @media screen and (max-width: 1024px) {
-    .book-list {
-        max-width: 80%;
-    }
-    
-    .book-title {
-        font-size: 0.75rem;
-    }
-    
-    .book-author {
-        font-size: 0.625rem;
-    }
-    
-    .book-course {
-        font-size: 0.625rem;
-    }
-} */
